--- a/BitShow/scss/bitshow.scss
+++ b/BitShow/scss/bitshow.scss
@@ -1,13 +1,16 @@
+$mainColor: rgb(28, 21, 58);
+
+
 // navbar
 #wrapper {
-    background-color: rgb(28, 21, 58);
+    background-color:$mainColor;
     
 }
 #navbar {
-    background-color: rgb(28, 21, 58);
+    background-color:$mainColor;
     color: white;
     position: relative;
-    width: 80%;
+    width: 65%;
     margin: 0 auto;
     h4 {
         display: inline-block;
@@ -27,7 +30,8 @@
 // BodySector
 
 #bodySector {
-
+    width: 65%;
+    margin: 0 auto;
     h1 {
         margin: 0 auto;
         width: 100%;
@@ -36,4 +40,29 @@
     }
 
     
+}
+.showCard {
+    display: inline-block;
+    width: 31%;
+    margin: 5px;
+    border: 1px solid gray;
+    img {
+        width: 100%;
+    }
+    h4 {
+        color: rgb(17, 104, 235);
+        margin: 15px 0px 15px 15px;
+    }
+}
+
+.autocomplete-items {
+    position: absolute;
+    top: 40px;
+    left: 1067px;
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    width: 155px;
+    border-radius: 10px;
+  
 }
