--- a/BitShow/scss/scss/bitshow.css
+++ b/BitShow/scss/scss/bitshow.css
@@ -42,7 +42,15 @@
 
 .autocomplete-items {
   position: absolute;
-  top: 30px;
-  left: 150px; }
+  top: 40px;
+  left: 1067px;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  width: 155px;
+  border-radius: 10px; }
+
+h1 {
+  color: white; }
 
 /*# sourceMappingURL=bitshow.css.map */
