--- a/BitShow/scss/bitshow.scss
+++ b/BitShow/scss/bitshow.scss
@@ -16,7 +16,6 @@ $mainColor: rgb(28, 21, 58);
         display: inline-block;
         font-size: 2em;
         margin: 0px;
-        margin-left: 4px;
         padding: 5px;
     }
     input {
@@ -63,6 +62,22 @@ $mainColor: rgb(28, 21, 58);
     color: black;
     border: 1px solid black;
     width: 155px;
-    border-radius: 10px;
-  
+    border-radius: 10px;  
+}
+
+img{
+    width: 400px;
+    height: 600px;
+}
+
+#append-info {
+position: relative;
+    width: 65%;
+    margin: 0 auto;
+    .seasonList {
+        display: inline-block;
+        position: absolute;
+        left: 420px;
+        
+    }
 }
