pushing v0.9 bit blog

--- a/BitBlog/bitblog/src/app/App.css
+++ b/BitBlog/bitblog/src/app/App.css
@@ -34,3 +34,34 @@
 #home > h1 {
   text-align: center;
 }
+
+/*                         SINGLEPOST                  */
+
+#SinglePost {
+  width: 80%;
+  margin: 0 auto;  
+  text-align: center;
+  
+}
+
+#singlePost > h4 {
+
+  text-align: left;
+}
+/*                         AUTHORS                  */
+
+#authors {
+  width: 80%;
+  margin: 0 auto; 
+}
+#authors > h1 {
+  text-align: center;
+}
+
+/*                         SINGLEAUTHOR                  */
+
+#singleAuthor {
+
+  width: 80%;
+  margin: 0 auto; 
+}
